# erebus

./: .gitignore  CMakeLists.txt  README.md  format_code.sh  insert-new-lines.sh
src/: .application.cc.swp  .application.h.swp  CMakeLists.txt  CMakeLists.txt~  application.cc  application.h  byte_order.h  directory.cc  directory.h  idisassembler.h  logger.cc  logger.h  main.cc  path.cc  path.h  path.h~
src/core/: CMakeLists.txt  platform_service_handler.cc  platform_service_handler.h
src/exceptions/: CMakeLists.txt  dynamic_link_library_exception.cc  dynamic_link_library_exception.h  plugin_exception.cc  plugin_exception.h
src/plugin_framework/: CMakeLists.txt  dynamic_library.cc  dynamic_library.h  iobject_adapter.h  plugin.h  plugin.h~  plugin_manager.cc  plugin_manager.h
src/plugins/: CMakeLists.txt
src/plugins/capstone/: CMakeLists.txt  capstone_plugin.cc  capstone_x86_disassembler.cc  capstone_x86_disassembler.h
src/utils/: CMakeLists.txt
src/utils/file_utils/: CMakeLists.txt  directory.cc  directory.h  directory_iterator.cc  directory_iterator.h  dynamic_library.cc  dynamic_library.h  file.cc  file.h  path.cc  path.h
test/: CMakeLists.txt
test/utils/: CMakeLists.txt
test/utils/file_utils/: .CMakeLists.txt.swo  CMakeLists.txt  directory_test.cc  file_test.cc  path_test.cc
